Responsive added and fixed dark mode

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -10,7 +10,7 @@
 
 
 body{
-    @apply bg-white transition-colors
+    @apply bg-white transition-colors antialiased
 }
 
 body.dark {
